test/corpus/commodities.txt
================================================================================
with amount
================================================================================
2020-12-02
    Expenses:Food:Groceries  2 EUR

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (quantity)
            (commodity)))))))

================================================================================
with amount that has commodity first
================================================================================
2020-12-02
    Expenses:Food:Groceries  EUR 2

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (commodity)
            (quantity)))))))

================================================================================
with amount that has non letter commodity
================================================================================
2020-12-02
    Expenses:Food:Groceries  2 $

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (quantity)
            (commodity)))))))

================================================================================
with amount that has non letter commodity first
================================================================================
2020-12-02
    Expenses:Food:Groceries  £2

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (commodity)
            (quantity)))))))

================================================================================
multiword commodity
================================================================================

D 1.000 "Foo's Bar"
C "Foo" = 1.20 "Foo Bar"

2020-12-02
    Expenses:Food:Groceries  2 "Hey there"

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (directive
      (char_directive
        (amount
          (quantity)
          (commodity)))))
  (journal_item
    (directive
      (char_directive
        (commodity)
        (amount
          (quantity)
          (commodity)))))
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (quantity)
            (commodity)))))))

================================================================================
UTF-8 commodity names
================================================================================

2020-12-02
    Expenses:Food:Groceries  2 "Hoi Zäme"
    Expenses:Food:Groceries  2 Zäme

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (account)
          (amount
            (quantity)
            (commodity)))
        (posting
          (account)
          (amount
            (quantity)
            (commodity)))))))
