test/corpus/status.txt
================================================================================
with cleared status
================================================================================
2020-12-02 *
    Expenses:Food:Groceries

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (status)
        (posting
          (account))))))

================================================================================
with pending status
================================================================================
2020-12-02 ! Walmart
    Expenses:Food:Groceries

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (status)
        (payee)
        (posting
          (account))))))

================================================================================
postings with status
================================================================================

2012-03-10
    * Assets:Bank A                 -20.00 u
    ! Assets:Bank B                  20.00 u

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (posting
          (status)
          (account)
          (amount
            (quantity_negative)
            (commodity)))
        (posting
          (status)
          (account)
          (amount
            (quantity)
            (commodity)))))))
